--- a/src/widgets/groups/ui/index.scss
+++ b/src/widgets/groups/ui/index.scss
@@ -1,5 +1,7 @@
 .groups_list_container{
   transition: 0.3s;
+  display: flex;
+  flex-direction: column;
 
   &:hover{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
