--- a/src/widgets/groups/ui/index.scss
+++ b/src/widgets/groups/ui/index.scss
@@ -1,9 +1,33 @@
-.groups_list_container{
+@import '../../../shared/variables';
+
+
+.groups_list_container .ant-card-body {
   transition: 0.3s;
   display: flex;
   flex-direction: column;
+  padding: 0;
+}
 
-  &:hover{
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+.groups_list_container__list .groups_list_container {
+  &__list{
+    &__item{
+      transition: 0.3s;
+      padding: 10px 20px;
+      border-radius: 5px;
+      border-bottom: 1px solid $main-light;
+
+      &:hover{
+        background-color: $main-light;
+      }
+    }
+  }
+}
+
+.groups_list_container__list{
+  border-radius: 5px;
+  transition: 0.3s;
+
+  &:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
 }
