--- a/src/shared/Layout/styles.scss
+++ b/src/shared/Layout/styles.scss
@@ -11,6 +11,7 @@
     padding: 0 20px;
     align-items: center;
     color: #fff;
+    justify-content: space-between;
   }
 
   .content_wrapper {
